important bug fixes
Meet new people, synced favorite networks